# bdcpp

./: .gitignore  CMakeLists.txt  License.txt  README.md  bd_config.h.in  main.cpp
detector/: CMakeLists.txt  detector_algo.cpp  detector_algo.h
